--- a/templates/base.html
+++ b/templates/base.html
@@ -43,12 +43,25 @@
 
               <!-- primary nav -->
               <div class="hidden md:flex items-center space-x-1">
+                
+                {% if user.is_staff %}
+                <a href="/admin" class="py-5 px-3 text-gray-700 hover:text-gray-900"
+                  >Admin</a
+                >
                 <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900"
                   >Features</a
                 >
                 <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900"
                   >Pricing</a
                 >
+                {% else %}
+                <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900"
+                  >Features</a
+                >
+                <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900"
+                  >Pricing</a
+                >
+                {% endif %}
               </div>
             </div>
 
