--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
   <body>
     <header>
       <!-- navbar goes here -->
-      <nav class="bg-gray-100">
+      <nav class="bg-gray-100 shadow-md">
         <div class="max-w-6xl mx-auto px-4">
           <div class="flex justify-between">
             <div class="flex space-x-4">
