--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,11 @@
     {% load static %}
 
     <!-- Link to CSS file -->
+    
+
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <script src="https://cdn.tailwindcss.com"></script>
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
@@ -51,9 +54,12 @@
                 <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900"
                   >Features</a
                 >
-                <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900"
+                <a href="{% url 'pricing' %}" class="py-5 px-3 text-gray-700 hover:text-gray-900"
                   >Pricing</a
                 >
+                <a href="{% url 'gallery' %}" class="py-5 px-3 text-gray-700 hover:text-gray-900"
+                >Demo Gallery</a
+              >
                 {% else %}
                 <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900"
                   >Features</a
@@ -61,6 +67,10 @@
                 <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900"
                   >Pricing</a
                 >
+                <a href="{% url 'gallery' %}" class="py-5 px-3 text-gray-700 hover:text-gray-900"
+                >Demo Gallery</a
+              >
+               
                 {% endif %}
               </div>
             </div>
@@ -68,10 +78,10 @@
             <!-- secondary nav -->
             <div class="hidden md:flex items-center space-x-1">
               {% if user.is_authenticated %}
-              <span title="user verified" class="material-symbols-outlined font-bold text-emerald-500 text-xl align-middle">
+              <span title="user verified" class="material-symbols-outlined font-bold text-emerald-500 text-xl align-middle mr-[-12px]">
                 verified_user
             </span>
-              <a href="{% url 'dashboard' %}" class="py-5 px-3">  {{user.username}}</a>
+              <a href="{% url 'dashboard' %}" class="py-5 px-3 capitalize">{{user.username}}</a>
               <a
                 href="{% url 'logout' %}"
                 class="py-2 px-3 bg-yellow-400 hover:bg-yellow-300 text-yellow-900 hover:text-yellow-800 rounded transition duration-300"
