--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -13,7 +13,7 @@
 
             <!-- Username Field with Icon -->
             <div class="flex items-center border border-gray-300 rounded-lg">
-                <span class="material-symbols-outlined p-2 text-gray-500">person</span>
+                <span class="material-symbols-outlined p-2 text-amber-500">person</span>
                 {{ form.username }}
             </div>
 
