--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
                 <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900"
                   >Features</a
                 >
-                <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900"
+                <a href="{% url 'pricing' %}" class="py-5 px-3 text-gray-700 hover:text-gray-900"
                   >Pricing</a
                 >
                 <a href="{% url 'gallery' %}" class="py-5 px-3 text-gray-700 hover:text-gray-900"
