--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -92,7 +92,7 @@
             <!-- Step 1 -->
             <div class="shadow bg-white p-10">
                 <div class="mb-4">
-                    <span class="material-symbols-outlined text-gray-700 text-5xl">person_add</span>
+                    <span class="material-symbols-outlined bg-gradient-to-r from-green-300  to-amber-300 bg-clip-text text-transparent text-5xl">person_add</span>
                 </div>
                 <h3 class="text-xl font-semibold">Sign Up</h3>
                 <p class="text-gray-500">Create your free account in just a few clicks.</p>
@@ -100,7 +100,7 @@
             <!-- Step 2 -->
             <div class="shadow bg-white p-10">
                 <div class="mb-4">
-                    <span class="material-symbols-outlined text-gray-700 text-5xl">link</span>
+                    <span class="material-symbols-outlined bg-gradient-to-r from-green-300  to-amber-300 bg-clip-text text-transparent text-5xl">link</span>
                 </div>
                 <h3 class="text-xl font-semibold">Connect Channel</h3>
                 <p class="text-gray-500">Sync your YouTube account to start tracking.</p>
@@ -108,7 +108,7 @@
             <!-- Step 3 -->
             <div class="shadow bg-white p-10">
                 <div class="mb-4">
-                    <span class="material-symbols-outlined text-gray-700 text-5xl">dashboard</span>
+                    <span class="material-symbols-outlined bg-gradient-to-r from-green-300  to-amber-300 bg-clip-text text-transparent text-5xl">bar_chart</span>
                 </div>
                 <h3 class="text-xl font-semibold">View Analytics</h3>
                 <p class="text-gray-500">Access in-depth metrics and reports instantly.</p>
@@ -116,7 +116,7 @@
             <!-- Step 4 -->
             <div class="shadow bg-white p-10">
                 <div class="mb-4">
-                    <span class="material-symbols-outlined text-gray-700 text-5xl">download</span>
+                    <span class="material-symbols-outlined bg-gradient-to-r from-green-300  to-amber-300 bg-clip-text text-transparent text-5xl">download</span>
                 </div>
                 <h3 class="text-xl font-semibold">Download Reports</h3>
                 <p class="text-gray-500">Export customized reports tailored to your needs.</p>
@@ -128,7 +128,7 @@
 <!-- Call to Action Section -->
 <section class="py-32 bg-white text-dark text-center">
     <h2 class="text-3xl font-bold mb-6">Start Tracking Your Channel's Growth Today!</h2>
-    <a href="{% url 'register' %}" class="bg-indigo-600 text-white px-6 py-3 rounded-md text-lg font-semibold hover:bg-indigo-500">
+    <a href="{% url 'register' %}" class="bg-indigo-500 text-white px-6 py-3 rounded-md text-lg font-semibold">
         Sign Up for Free
     </a>
 </section>
