--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -54,7 +54,7 @@
       </li>
       <li>
         <a
-          href="#"
+          href="{% url 'product' %}"
           class="flex items-center py-2 px-4 rounded hover:bg-gray-200"
         >
           <span class="material-symbols-outlined mr-2">workspaces</span>
