added unfold admin + product template

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -128,7 +128,7 @@
 <!-- Call to Action Section -->
 <section class="py-32 bg-white text-dark text-center">
     <h2 class="text-3xl font-bold mb-6">Start Tracking Your Channel's Growth Today!</h2>
-    <a href="{% url 'register' %}" class="bg-indigo-500 text-white px-6 py-3 rounded-md text-lg font-semibold">
+    <a href="{% url 'register' %}" class="bg-gradient-to-r from-green-300  to-amber-200 text-white px-6 py-3 rounded-md text-lg font-semibold">
         Sign Up for Free
     </a>
 </section>
