--- a/core/templates/product.html
+++ b/core/templates/product.html
@@ -13,7 +13,7 @@
     </p>
     <a
       href="#get-started"
-      class="mt-8 inline-block bg-[#A0D683] text-white py-3 px-6 rounded-md hover:bg-[#D3EE98] transition-all"
+      class="mt-8 inline-block bg-gradient-to-r from-green-300  to-amber-200 text-white py-3 px-6 rounded-md hover:bg-[#D3EE98] transition-all"
       >Get Your Report</a
     >
   </div>
@@ -36,7 +36,7 @@
         <img
           src="{% static 'imgs/product1.png' %}"
           alt="Analytics Report"
-          class="rounded-lg shadow-lg w-full h-auto object-cover"
+          class="rounded-lg shadow-lg w-1/2 h-auto object-cover"
         />
       </div>
     </div>
@@ -77,7 +77,7 @@
           >
           <h3 class="mt-4 text-xl font-bold text-gray-800">No Monthly Fees</h3>
           <p class="mt-2 text-gray-600">
-            Unlike others, we don't lock you into subscription plans. Pay for a
+            Unlike others, we don't lock you into subscription plans. Or try to upsell you. Pay for a
             report only when you need one, nothing more.
           </p>
         </div>
